fix(VTabs): alignment in mobile mode
fixes #8294

--- a/packages/vuetify/src/components/VTabs/VTabs.sass
+++ b/packages/vuetify/src/components/VTabs/VTabs.sass
@@ -46,18 +46,20 @@
   border-radius: inherit
   height: $tabs-bar-height
 
-  // https://github.com/vuetifyjs/vuetify/issues/6932
-  &.v-tabs-bar--is-mobile:not(.v-tabs-bar--show-arrows) > .v-slide-group__wrapper > .v-tabs-bar__content
-    & > .v-tab:first-child,
-    & > .v-tabs-slider-wrapper + .v-tab
-      +ltr()
-        margin-left: $tabs-item-mobile-no-arrows-margin
-
-      +rtl()
-        margin-right: $tabs-item-mobile-no-arrows-margin
-
   &.v-item-group > *
     cursor: initial
+
+// https://github.com/vuetifyjs/vuetify/issues/6932
+.v-tabs:not(.v-tabs--show-arrows):not(.v-tabs--right):not(.v-tabs--fixed-tabs):not(.v-tabs--centered):not(.v-tabs--vertical)
+  .v-tabs-bar--is-mobile > .v-slide-group__wrapper > .v-tabs-bar__content
+      & > .v-tab:first-child,
+      & > .v-tabs-slider-wrapper + .v-tab
+        +ltr()
+          margin-left: $tabs-item-mobile-no-arrows-margin
+
+        +rtl()
+          margin-right: $tabs-item-mobile-no-arrows-margin
+
 
 .v-tab
   align-items: center
@@ -108,14 +110,15 @@
     transition: $primary-transition
 
 // Modifier
-.v-tabs--align-with-title > .v-tabs-bar--is-mobile:not(.v-tabs-bar--show-arrows) > .v-slide-group__wrapper > .v-tabs-bar__content
-  & > .v-tab:first-child,
-  & > .v-tabs-slider-wrapper + .v-tab
-    +ltr()
-      margin-left: $tabs-item-align-with-title-margin
+.v-tabs--align-with-title:not(.v-tabs--right):not(.v-tabs--fixed-tabs):not(.v-tabs--centered):not(.v-tabs--vertical)
+  & > .v-tabs-bar--is-mobile:not(.v-tabs-bar--show-arrows) > .v-slide-group__wrapper > .v-tabs-bar__content
+    & > .v-tab:first-child,
+    & > .v-tabs-slider-wrapper + .v-tab
+      +ltr()
+        margin-left: $tabs-item-align-with-title-margin
 
-    +rtl()
-      margin-right: $tabs-item-align-with-title-margin
+      +rtl()
+        margin-right: $tabs-item-align-with-title-margin
 
 .v-tabs--fixed-tabs > .v-tabs-bar,
 .v-tabs--centered > .v-tabs-bar
